dist/ba_root/mods/tools/pyarmor.error.log
7696 MainProcess 2024-06-29 17:59:09,206
Traceback (most recent call last):
  File "/home/ubuntu/.local/lib/python3.10/site-packages/pyarmor/cli/__main__.py", line 764, in main
    main_entry(sys.argv[1:])
  File "/home/ubuntu/.local/lib/python3.10/site-packages/pyarmor/cli/__main__.py", line 752, in main_entry
    return args.func(ctx, args)
  File "/home/ubuntu/.local/lib/python3.10/site-packages/pyarmor/cli/__main__.py", line 244, in cmd_gen
    builder.process(options)
  File "/home/ubuntu/.local/lib/python3.10/site-packages/pyarmor/cli/generate.py", line 191, in process
    self._obfuscate_scripts()
  File "/home/ubuntu/.local/lib/python3.10/site-packages/pyarmor/cli/generate.py", line 144, in _obfuscate_scripts
    code = self._generate_obfuscated_script(r)
  File "/home/ubuntu/.local/lib/python3.10/site-packages/pyarmor/cli/generate.py", line 104, in _generate_obfuscated_script
    return Pytransform3.generate_obfuscated_script(self.ctx, res)
  File "/home/ubuntu/.local/lib/python3.10/site-packages/pyarmor/cli/core/__init__.py", line 89, in generate_obfuscated_script
    return m.generate_obfuscated_script(ctx, res)
  File "<maker>", line 713, in generate_obfuscated_script
  File "/home/ubuntu/.local/lib/python3.10/site-packages/pyarmor/cli/__init__.py", line 16, in process
    return meth(self, res, *args, **kwargs)
  File "<maker>", line 512, in process
  File "/home/ubuntu/.local/lib/python3.10/site-packages/pyarmor/cli/resource.py", line 144, in reparse
    self.mtree = ast.parse(''.join(lines), self.frozenname, 'exec')
  File "/usr/lib/python3.10/ast.py", line 50, in parse
    return compile(source, filename, mode, flags,
  File "<frozen mongo>", line 36
    owner = dbname"owner"]
                         ^
SyntaxError: unmatched ']'
